Accessibility contrast fix.

--- a/website/src/style/theme.scss
+++ b/website/src/style/theme.scss
@@ -9,7 +9,8 @@ $themes: (
 		accented-text: #fff,
 		accented-bg: #ea6645,
 		bold-text: #111111,
-		t-neutral-100: rgba(0,0,0,0.05)
+		t-neutral-100: rgba(0, 0, 0, 0.05),
+		t-neutral-500: rgba(0, 0, 0, 0.5)
 	),
 	dark: (
 		neutral-0: #000,
@@ -21,7 +22,8 @@ $themes: (
 		accented-text: rgba(255, 255, 255, 0.8),
 		accented-bg: #bb5237,
 		bold-text: #d2d2d2,
-		t-neutral-100: rgba(255,255,255,0.05)
+		t-neutral-100: rgba(255, 255, 255, 0.05),
+		t-neutral-500: rgba(255, 255, 255, 0.3)
 	)
 );
 
@@ -87,7 +89,13 @@ $themes: (
 	@each $theme, $colors in $themes {
 		.theme-#{$theme} & {
 			$color: map-get($colors, $key);
-			background: linear-gradient(to right, rgba(0,0,0,0) #{$from}, $color #{$from}, $color #{$to}, rgba(0,0,0,0) #{$to});
+			background: linear-gradient(
+				to right,
+				rgba(0, 0, 0, 0) #{$from},
+				$color #{$from},
+				$color #{$to},
+				rgba(0, 0, 0, 0) #{$to}
+			);
 			background-repeat: no-repeat;
 		}
 	}
